version/0.33/_sources/api/solver/_autosummary/settings/phase_24.rst.txt
:orphan:

.. _phase_24:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_24
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_24_child <phase_24_child>`


.. rubric:: Included in:

==================================================================   ================================================

Parent                                                                                                        Summary

==================================================================   ================================================
:ref:`settings_22 <settings_22>`                                                   Domain name to define settings on.

:ref:`recirculation_outlet_2_child <recirculation_outlet_2_child>`       'child_object_type' of recirculation_outlet.

==================================================================   ================================================

